--- a/Employees/webapp/manifest.json
+++ b/Employees/webapp/manifest.json
@@ -16,7 +16,7 @@
       "toolsId": "3e7858f9-1de7-49ab-8844-4f802a37aaad"
     },
     "dataSources": {
-      "mainService": {
+      "Northwind.svc": {
         "uri": "/v2/northwind/northwind.svc/",
         "type": "OData",
         "settings": {
@@ -24,6 +24,14 @@
           "localUri": "localService/metadata.xml",
           "odataVersion": "2.0"
         }
+      },
+      "YSAPUI5_SRV_01":{
+          "uri": "/sap/opu/odata/sap/YSAPUI5_SRV_01/",
+          "type": "OData",
+          "settings": {
+            "odataVersion": "2.0",
+            "localUri": "localService/YSAPUI5_SRV_01/metadata.xml"
+          }
       }
     }
   },
@@ -69,10 +77,29 @@
           "bundleName": "logaligroup.Employees.i18n.i18n"
         }
       },
-      "": {
-        "dataSource": "mainService",
+      "odataNorthwind": {
+        "dataSource": "Northwind.svc",
         "preload": true,
-        "settings": {}
+        "settings": {
+          "defaultOperationMode": "Server",
+          "defaultBindingMode": "OneWay",
+          "defaultCountMode" : "Request",
+          "refreshAfterChange": false 
+        }
+      },
+      "incidenceModel":{
+        "type": "sap.ui.model.odata.v2.ODataModel",
+        "dataSource": "YSAPUI5_SRV_01",
+        "preload": true,
+        "settings": {
+          "defaultOperationMode": "Server",
+          "defaultBindingMode": "TwoWay",
+          "defaultCountMode": "Request",
+          "refreshAfterChange": false,
+          "useBatch": false,
+          "defaultUpdateMethod": "Put"
+        }
+
       }
     },
     "resources": {
