--- a/Employees/webapp/manifest.json
+++ b/Employees/webapp/manifest.json
@@ -122,9 +122,16 @@
       "routes": [
         {
           "name": "RouteMain",
-          "pattern": ":?query:",
+          "pattern": "",
           "target": [
             "TargetMain"
+          ]
+        },
+        {
+          "name": "RouteOrderDetails",
+          "pattern": "OrderDetails/{OrderID}",
+          "target": [
+            "TargetOrderDetails"
           ]
         }
       ],
@@ -137,20 +144,17 @@
           "viewName": "Main"
         },
 
-        "TargetMasterEmployee": {
+        "TargetOrderDetails": {
           "viewType": "XML",
-          "transition": "slide",
-          "clearControlAggregation": false,
-          "viewId": "MasterEmployee",
-          "viewName": "MasterEmployee"
+          "viewName": "OrderDetails"
         }
       }
     },
     "rootView": {
-      "viewName": "logaligroup.Employees.view.Main",
+      "viewName": "logaligroup.Employees.view.App",
       "type": "XML",
       "async": true,
-      "id": "Main"
+      "id": "app"
     }
   }
 }
