20_Odata_Objetos_Media

--- a/ui5.yaml
+++ b/ui5.yaml
@@ -16,9 +16,11 @@ server:
             - /test-resources
           url: https://ui5.sap.com
         backend:
-          - path: /v2
-            url: https://services.odata.org
-            destination: Northwind
+          - path: /sap
+            url: http://erp13.sap4practice.com:9037
+            destination: logaligroupERP
+            client: '001'
+            authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
