--- a/ui5-local.yaml
+++ b/ui5-local.yaml
@@ -30,9 +30,11 @@ server:
       configuration:
         ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
         backend:
-          - path: /v2
-            url: https://services.odata.org
-            destination: Northwind
+          - path: /sap
+            url: http://erp13.sap4practice.com:9037
+            destination: logaligroupERP
+            client: '001'
+            authenticationType: BasicAuthentication
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
